--- a/styles/style.css
+++ b/styles/style.css
@@ -326,6 +326,7 @@ img {
 .reservation__button {
   gap: 10px;
   margin: auto;
+  margin-bottom: 88px;
   border-radius: 4px;
   padding: 16px 32px;
   color: #fff;
@@ -333,13 +334,13 @@ img {
   font-weight: 500;
   font-size: 16px;
   background: #0e1734;
-  margin-bottom: 88px;
 }
 
 .reservation__block__house{
   display: grid;
   grid-template-columns: repeat(3, 384px);
-  justify-content: space-evenly;
+  justify-content: center;
+  gap: 24px;
 }
 
 .reservation__image__house {
@@ -349,31 +350,36 @@ img {
 }
 
 .reservation__title__house {
-  color: #000;
-  text-align: center;
+  display: flex;
+  margin-bottom: 16px;
   margin-top: 32px ;
+  color: #000;
   font-family: Montserrat;
-  font-size: 24px;
   font-weight: 600;
+  font-size: 24px;
   line-height: 150%;
+  text-align: center;
 }
 
 .reservation__content__house {
+  display: flex;
   color: #848fac;
   font-family: Inter;
-  font-size: 18px;
   font-weight: 400;
+  font-size: 18px;
   line-height: 150%;
-  display: flex;
+  margin-bottom: 59px;
 }
 
 .reservation__button__house {
   color: #424f7b;
   font-family: Inter;
-  font-size: 18px;
   font-weight: 400;
+  font-size: 18px;
   line-height: 150%;
   text-decoration: none;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
 }
 
 .reservation__arrow {
