--- a/styles/style.css
+++ b/styles/style.css
@@ -351,8 +351,8 @@ img {
 
 .reservation__title__house {
   display: flex;
-  margin-bottom: 16px;
   margin-top: 32px;
+  margin-bottom: 16px;
   color: #000;
   font-family: Montserrat;
   font-weight: 600;
@@ -363,12 +363,12 @@ img {
 
 .reservation__content__house {
   display: flex;
+  margin-bottom: 59px;
   color: #848fac;
   font-family: Inter;
   font-weight: 400;
   font-size: 18px;
   line-height: 150%;
-  margin-bottom: 59px;
 }
 
 .reservation__button__house {
@@ -391,49 +391,121 @@ img {
   justify-items: center;
   align-items: center;
   margin-top: 80px;
+  margin-right: 323px;
   margin-bottom: 80px;
   margin-left: 324px;
-  margin-right: 323px;
 }
 
 .photo__block-title {
   color: #192252;
-  text-align: center;
   font-family: Montserrat;
+  font-weight: 600;
   font-size: 36px;
   font-style: normal;
-  font-weight: 600;
   line-height: 150%; /* 54px */
   letter-spacing: -0.36px;
+  text-align: center;
 }
 
 .photo__img {
   width: 120px;
   height: 120px;
-  margin-bottom: 44px;
 }
 
 .photo__block-content {
+  max-width: 793.057px;
+  margin-top: 44px;
   color: #848fac;
-  text-align: center;
   font-family: Inter;
+  font-weight: 400;
   font-size: 18px;
   font-style: normal;
-  font-weight: 400;
   line-height: 150%; /* 27px */
+  text-align: center;
 }
 
 .name__title {
+  margin-top: 40px;
   color: #192252;
-  text-align: center;
   font-family: Inter;
+  font-weight: 500;
   font-size: 20px;
   font-style: normal;
-  font-weight: 500;
   line-height: 150%; /* 30px */
+  text-align: center;
 }
 
 .img__points {
   width: 72px;
   height: 12px;
+  margin-top: 24px;
+}
+
+.block__footer {
+  padding: 120px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  justify-items: center;
+  align-items: baseline;
+  min-width: 1440px;
+  min-height: 444px;
+  background: #0b265a;
+}
+
+.subblock__footer {
+  display: grid;
+  gap: 24px;
+}
+
+.block__footer-title {
+  color: #fff;
+  font-family: Montserrat;
+  font-weight: 700;
+  font-size: 32px;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: -0.32px;
+}
+
+.block__footer-content {
+  max-width: 186px;
+  margin-top: 13px;
+  color: #d9dbde;
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 16px;
+  font-style: normal;
+  line-height: 28px; /* 175% */
+}
+
+.block__footer-img {
+  width: 32px;
+  height: 32px;
+  margin-top: 36px;
+  position: relative;
+  gap: 36px;
+}
+
+.block__footer-subtitles {
+  color: #fff;
+  font-family: Inter;
+  font-weight: 700;
+  font-size: 16px;
+  font-style: normal;
+  line-height: normal;
+  letter-spacing: 0.16px;
+}
+
+.block__footer-content_2 {
+  color: #d9dbde;
+  font-family: Inter;
+  font-weight: 400;
+  font-size: 16px;
+  font-style: normal;
+  line-height: normal;
+}
+
+.block__footer-hotel {
+  display: flex;
+  flex-direction: column;
 }
