--- a/styles/style.css
+++ b/styles/style.css
@@ -91,7 +91,7 @@ img {
 .first__title {
   margin-bottom: 24px;
   color: #192252;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-weight: 600;
   font-size: 48px;
   letter-spacing: -0.48px;
@@ -174,7 +174,7 @@ img {
 
 .about__us__title {
   color: #192252;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-weight: 600;
   font-size: 36px;
   line-height: 150%;
@@ -226,7 +226,7 @@ img {
 
 .benifit__title {
   color: #192252;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-weight: 600;
   font-size: 36px;
   line-height: 150%;
@@ -236,7 +236,7 @@ img {
 .benifit__content {
   margin-right: 126px;
   color: #848fac;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 150%;
@@ -274,7 +274,7 @@ img {
   margin-bottom: 37px;
   margin-left: 497px;
   color: #192252;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-weight: 600;
   font-size: 36px;
   line-height: 150%;
@@ -306,7 +306,7 @@ img {
 
 .reservation__title {
   color: #192252;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-weight: 600;
   font-size: 36px;
   line-height: 150%;
@@ -316,7 +316,7 @@ img {
 
 .reservation__content {
   color: #848fac;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 150%;
@@ -330,7 +330,7 @@ img {
   border-radius: 4px;
   padding: 16px 32px;
   color: #fff;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-weight: 500;
   font-size: 16px;
   background: #0e1734;
@@ -354,7 +354,7 @@ img {
   margin-top: 32px;
   margin-bottom: 16px;
   color: #000;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-weight: 600;
   font-size: 24px;
   line-height: 150%;
@@ -362,10 +362,18 @@ img {
 }
 
 .reservation__content__house {
-  display: flex;
   margin-bottom: 59px;
   color: #848fac;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 150%;
+}
+
+.reservation__content__house_double_decker {
+  margin-bottom: 32px;
+  color: #848fac;
+  font-family: Inter, sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 150%;
@@ -373,7 +381,7 @@ img {
 
 .reservation__button__house {
   color: #424f7b;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 150%;
@@ -383,6 +391,7 @@ img {
 .reservation__arrow {
   width: 20px;
   height: 20px;
+  vertical-align: middle;
 }
 
 .photo__block {
@@ -398,7 +407,7 @@ img {
 
 .photo__block-title {
   color: #192252;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-weight: 600;
   font-size: 36px;
   font-style: normal;
@@ -416,7 +425,7 @@ img {
   max-width: 793.057px;
   margin-top: 44px;
   color: #848fac;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-weight: 400;
   font-size: 18px;
   font-style: normal;
@@ -427,7 +436,7 @@ img {
 .name__title {
   margin-top: 40px;
   color: #192252;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-weight: 500;
   font-size: 20px;
   font-style: normal;
@@ -447,8 +456,6 @@ img {
   grid-template-columns: repeat(4, 1fr);
   justify-items: center;
   align-items: baseline;
-  min-width: 1440px;
-  min-height: 444px;
   background: #0b265a;
 }
 
@@ -459,11 +466,9 @@ img {
 
 .block__footer-title {
   color: #fff;
-  font-family: Montserrat;
+  font-family: Montserrat, sans-serif;
   font-weight: 700;
   font-size: 32px;
-  font-style: normal;
-  line-height: normal;
   letter-spacing: -0.32px;
 }
 
@@ -471,7 +476,7 @@ img {
   max-width: 186px;
   margin-top: 13px;
   color: #d9dbde;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-weight: 400;
   font-size: 16px;
   font-style: normal;
@@ -484,11 +489,19 @@ img {
   margin-top: 36px;
   position: relative;
   gap: 36px;
+  margin-right: 15px;
+}
+
+.image__vk {
+  padding-left: 5px;
+  padding-right: 15.87px;
+  padding-top: 19px;
+  padding-bottom: 19px;
 }
 
 .block__footer-subtitles {
   color: #fff;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-weight: 700;
   font-size: 16px;
   font-style: normal;
@@ -498,7 +511,7 @@ img {
 
 .block__footer-content_2 {
   color: #d9dbde;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-weight: 400;
   font-size: 16px;
   font-style: normal;
@@ -506,6 +519,5 @@ img {
 }
 
 .block__footer-hotel {
-  display: flex;
-  flex-direction: column;
+  margin-right: 335px;
 }
