--- a/styles/style.css
+++ b/styles/style.css
@@ -2,7 +2,6 @@
 *::before,
 *::after {
   box-sizing: border-box;
-  font-family: Montserrat-Black, Inter-Bold, Helvetica, Arial, sans-serif;
 }
 
 body {
@@ -46,10 +45,14 @@ img {
 
 .header__title {
   font-size: 32px;
+  font-family: Montserrat, sans-serif;
+  font-weight: 600;
 }
 
 .header__menu {
   font-size: 16px;
+  font-family: Inter;
+  font-weight: 500;
 }
 
 .header__links-list {
@@ -101,9 +104,11 @@ img {
   max-width: 584px;
   margin-bottom: 59px;
   color: #848fac;
-  font-weight: 400;
+  font-family: Inter;
   font-size: 18px;
-  line-height: 150%;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 150%; /* 27px */
 }
 
 .first__function {
@@ -260,7 +265,6 @@ img {
   justify-content: center;
   gap: 24px;
   margin-left: 126px;
-  /* align-items: center; */
 }
 
 .rectangle {
@@ -270,9 +274,9 @@ img {
 }
 
 .rectangle__title {
-  display: grid;
+  text-align:  center;
+  margin-left: 330px;
   margin-bottom: 37px;
-  margin-left: 497px;
   color: #192252;
   font-family: Montserrat, sans-serif;
   font-weight: 600;
