--- a/styles/style.css
+++ b/styles/style.css
@@ -4,524 +4,19 @@
   box-sizing: border-box;
 }
 
-body {
-  max-width: 1416;
-  margin: 0 auto;
+.page {
+  min-inline-size: 360px;
+  margin: 0;
 }
 
+p,
 h1,
 h2,
 h3,
-h4,
-h5,
-h6,
-p,
+blockquote,
 ul,
 ol,
 li,
-blockquote {
+figure {
   margin: 0;
-  padding: 0;
-}
-
-a {
-  color: inherit;
-}
-
-img {
-  width: 100%;
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding-top: 41px;
-  padding-right: 120px;
-  padding-bottom: 32px;
-  padding-left: 120px;
-  color: #192252;
-}
-
-.header__title {
-  font-size: 32px;
-  font-family: Montserrat, sans-serif;
-  font-weight: 600;
-}
-
-.header__menu {
-  font-size: 16px;
-  font-family: Inter;
-  font-weight: 500;
-}
-
-.header__links-list {
-  display: flex;
-  gap: 32px;
-}
-
-.header__links-list-item_no-bullit {
-  list-style: none;
-}
-
-.header__link_active {
-  text-decoration: none;
-}
-
-.header__button {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  border-radius: 4px;
-  padding: 14px 16px;
-  color: #fff;
-  font-size: 16px;
-  background: #0e1734;
-}
-
-.first {
-  display: grid;
-  grid-template-columns: 1fr 180px 180px 180px;
-  padding: 80px 120px;
-}
-
-.site-activity {
-  display: flex;
-  justify-content: space-between;
-}
-
-.first__title {
-  margin-bottom: 24px;
-  color: #192252;
-  font-family: Montserrat, sans-serif;
-  font-weight: 600;
-  font-size: 48px;
-  letter-spacing: -0.48px;
-}
-
-.first__content {
-  max-width: 584px;
-  margin-bottom: 59px;
-  color: #848fac;
-  font-family: Inter;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%; /* 27px */
-}
-
-.first__function {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-}
-
-.first__button {
-  gap: 10px;
-  margin-right: auto;
-  border-radius: 4px;
-  padding: 16px 32px;
-  color: #fff;
-  font-size: 16px;
-  background: #0e1734;
-}
-
-.block_meritt_thomas {
-  display: flex;
-}
-
-.first__meritt__thomas {
-  display: flex;
-  gap: 24px;
-  width: 180px;
-  height: 588px;
-}
-
-.first_part_of_the_house {
-  grid-column-start: 2;
-  grid-column-end: 3;
-}
-
-.second_part_of_the_house {
-  grid-column-start: 3;
-  grid-column-end: 4;
-  align-self: start;
-  margin-top: 80px;
-}
-
-.third_part_of_the_house {
-  grid-column-start: 4;
-  grid-column-end: 5;
-}
-
-.about__us {
-  display: flex;
-  grid-template-columns: repeat(2, 1fr);
-  padding: 80px 120px;
-}
-
-.about__us__img {
-  width: 384px;
-  height: 576px;
-  margin-right: 126px;
-}
-.about__us__position {
-  grid-column-start: 2;
-  grid-column-end: 3;
-}
-
-.about__us__block {
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  align-items: center;
-}
-
-.about__us__title {
-  color: #192252;
-  font-family: Montserrat, sans-serif;
-  font-weight: 600;
-  font-size: 36px;
-  line-height: 150%;
-  letter-spacing: -0.36px;
-}
-
-.about__us__content {
-  max-width: 584px;
-  color: #848fac;
-  font-family: Inter;
-  font-size: 18px;
-  line-height: 150%;
-}
-
-.about__us__button {
-  display: inline-flex;
-  justify-content: center;
-  align-items: center;
-  gap: 10px;
-  margin-right: auto;
-  border-radius: 4px;
-  padding: 16px 32px;
-  color: #fff;
-  font-family: Inter;
-  font-size: 16px;
-  background: #0e1734;
-}
-
-.benifit {
-  display: flex;
-  flex-direction: column;
-  gap: 32px;
-  padding-top: 80px;
-  padding-right: 226px;
-  padding-bottom: 80px;
-  padding-left: 120px;
-}
-
-.benifit__block_1 {
-  display: flex;
-  justify-content: end;
-}
-
-.benifit__block_interior_1 {
-  display: grid;
-  gap: 24px;
-  align-self: center;
-}
-
-.benifit__title {
-  color: #192252;
-  font-family: Montserrat, sans-serif;
-  font-weight: 600;
-  font-size: 36px;
-  line-height: 150%;
-  letter-spacing: -0.36px;
-}
-
-.benifit__content {
-  margin-right: 126px;
-  color: #848fac;
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 150%;
-}
-
-.benifit__img {
-  width: 384px;
-  height: 384px;
-  border-radius: 4px;
-}
-
-.benifit__block_2 {
-  display: flex;
-  align-items: center;
-  margin-bottom: 159px;
-}
-
-.benifit__content_interior {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  gap: 24px;
-  margin-left: 126px;
-}
-
-.rectangle {
-  display: flex;
-  justify-content: center;
-  margin-bottom: 80px;
-}
-
-.rectangle__title {
-  text-align:  center;
-  margin-left: 330px;
-  margin-bottom: 37px;
-  color: #192252;
-  font-family: Montserrat, sans-serif;
-  font-weight: 600;
-  font-size: 36px;
-  line-height: 150%;
-  letter-spacing: -0.36px;
-}
-
-.rectangle__image__interiro {
-  display: flex;
-  flex-direction: column;
-  justify-content: end;
-}
-
-.rectangle__image_1 {
-  display: flex;
-  width: 1090px;
-  height: 585px;
-}
-
-.rectangle__image_2-3-4 {
-  width: 344px;
-  height: 195.211px;
-}
-
-.reservation {
-  display: flex;
-  flex-direction: column;
-  gap: 24px;
-}
-
-.reservation__title {
-  color: #192252;
-  font-family: Montserrat, sans-serif;
-  font-weight: 600;
-  font-size: 36px;
-  line-height: 150%;
-  letter-spacing: -0.36px;
-  text-align: center;
-}
-
-.reservation__content {
-  color: #848fac;
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 150%;
-  text-align: center;
-}
-
-.reservation__button {
-  gap: 10px;
-  margin: auto;
-  margin-bottom: 88px;
-  border-radius: 4px;
-  padding: 16px 32px;
-  color: #fff;
-  font-family: Inter, sans-serif;
-  font-weight: 500;
-  font-size: 16px;
-  background: #0e1734;
-}
-
-.reservation__block__house {
-  display: grid;
-  grid-template-columns: repeat(3, 384px);
-  justify-content: center;
-  gap: 24px;
-}
-
-.reservation__image__house {
-  width: 384px;
-  min-height: 489px;
-  border-radius: 4px;
-}
-
-.reservation__title__house {
-  display: flex;
-  margin-top: 32px;
-  margin-bottom: 16px;
-  color: #000;
-  font-family: Montserrat, sans-serif;
-  font-weight: 600;
-  font-size: 24px;
-  line-height: 150%;
-  text-align: center;
-}
-
-.reservation__content__house {
-  margin-bottom: 59px;
-  color: #848fac;
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 150%;
-}
-
-.reservation__content__house_double_decker {
-  margin-bottom: 32px;
-  color: #848fac;
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 150%;
-}
-
-.reservation__button__house {
-  color: #424f7b;
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 150%;
-  text-decoration: none;
-}
-
-.reservation__arrow {
-  width: 20px;
-  height: 20px;
-  vertical-align: middle;
-}
-
-.photo__block {
-  display: grid;
-  grid-template-rows: repeat(3, 1fr);
-  justify-items: center;
-  align-items: center;
-  margin-top: 80px;
-  margin-right: 323px;
-  margin-bottom: 80px;
-  margin-left: 324px;
-}
-
-.photo__block-title {
-  color: #192252;
-  font-family: Montserrat, sans-serif;
-  font-weight: 600;
-  font-size: 36px;
-  font-style: normal;
-  line-height: 150%; /* 54px */
-  letter-spacing: -0.36px;
-  text-align: center;
-}
-
-.photo__img {
-  width: 120px;
-  height: 120px;
-}
-
-.photo__block-content {
-  max-width: 793.057px;
-  margin-top: 44px;
-  color: #848fac;
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-size: 18px;
-  font-style: normal;
-  line-height: 150%; /* 27px */
-  text-align: center;
-}
-
-.name__title {
-  margin-top: 40px;
-  color: #192252;
-  font-family: Inter, sans-serif;
-  font-weight: 500;
-  font-size: 20px;
-  font-style: normal;
-  line-height: 150%; /* 30px */
-  text-align: center;
-}
-
-.img__points {
-  width: 72px;
-  height: 12px;
-  margin-top: 24px;
-}
-
-.block__footer {
-  padding: 120px;
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  justify-items: center;
-  align-items: baseline;
-  background: #0b265a;
-}
-
-.subblock__footer {
-  display: grid;
-  gap: 24px;
-}
-
-.block__footer-title {
-  color: #fff;
-  font-family: Montserrat, sans-serif;
-  font-weight: 700;
-  font-size: 32px;
-  letter-spacing: -0.32px;
-}
-
-.block__footer-content {
-  max-width: 186px;
-  margin-top: 13px;
-  color: #d9dbde;
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  font-style: normal;
-  line-height: 28px; /* 175% */
-}
-
-.block__footer-img {
-  width: 32px;
-  height: 32px;
-  margin-top: 36px;
-  position: relative;
-  gap: 36px;
-  margin-right: 15px;
-}
-
-.image__vk {
-  padding-left: 5px;
-  padding-right: 15.87px;
-  padding-top: 19px;
-  padding-bottom: 19px;
-}
-
-.block__footer-subtitles {
-  color: #fff;
-  font-family: Inter, sans-serif;
-  font-weight: 700;
-  font-size: 16px;
-  font-style: normal;
-  line-height: normal;
-  letter-spacing: 0.16px;
-}
-
-.block__footer-content_2 {
-  color: #d9dbde;
-  font-family: Inter, sans-serif;
-  font-weight: 400;
-  font-size: 16px;
-  font-style: normal;
-  line-height: normal;
-}
-
-.block__footer-hotel {
-  margin-right: 335px;
 }
