--- a/fonts/fonts.css
+++ b/fonts/fonts.css
@@ -1,17 +1,36 @@
 @font-face {
-  font-family: 'Montserrat-Black';
+  font-family: Raleway;
   src:
-  url(./Montserrat-Regular.ttf) format('truetype');
+    url(./Raleway-Regular.woff2) format('woff2'),
+    url(./Raleway-Regular.woff) format('woff');
+  font-weight: 400;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: Raleway;
+  src:
+    url(./Raleway-Italic.woff2) format('woff2'),
+    url(./Raleway-Italic.woff) format('woff');
+  font-weight: 400;
+  font-style: italic;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: Raleway;
+  src:
+    url(./Raleway-Bold.woff2) format('woff2'),
+    url(./Raleway-Bold.woff) format('woff');
+  font-weight: 700;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'STIX Two Text';
+  src:
+    url(./STIXTwoText-SemiBold.woff2) format('woff2'),
+    url(./STIXTwoText-SemiBold.woff) format('woff');
   font-weight: 600;
   font-display: swap;
 }
-
-
-@font-face {
-  font-family: 'Inter-Bold';
-  src:
-  url(./Inter-ExtraLight.ttf) format('truetype');
-  font-weight: 500;
-  font-display: swap;
-}
-
